# my-openenv

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TECHNICAL.md  baseline.py  client.py  generate_learning_guide.py  idea.md  inference.py  models.py  openenv-learning-guide.md  openenv.yaml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_live_space.py
.github/workflows/: lint.yml
safeact_env/: runner.py
scripts/: baseline.py  rule_based_agent.py
server/: app.py  environment.py  reward.py
server/tasks/: __init__.py  base.py  cloud_infra.py  easy.py  hard.py  medical.py  medium.py
shared/: llm_utils.py
static/: demo.html
tests/: test_api.py  test_cloud_infra.py  test_environment.py  test_graders.py  test_medical.py  test_models.py  test_randomization.py
